--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "moonbase:export": "hardhat --network moonbase export --export exports/moonbase.json",
     "arbitrum:deploy": "hardhat --network arbitrum deploy",
     "arbitrum:export": "hardhat --network arbitrum export --export exports/arbitrum.json",
-    "test": "brownie test",
-    "test:coverage": "brownie test --coverage",
-    "test:gas": "brownie test --gas"
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" hardhat coverage --testfiles \"test/*.test.ts\"",
+    "test:gas": "cross-env REPORT_GAS=true yarn test",
+    "test:brownie": "brownie test",
+    "test:brownie:coverage": "brownie test --coverage",
+    "test:brownie:gas": "brownie test --gas"
   },
   "lint-staged": {
     "*.ts": [
