--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -1,6 +1,6 @@
 name: Coveralls
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -39,8 +39,8 @@ jobs:
     - name: Installing dependencies
       run: yarn install --frozen-lockfile
 
-    - name: yarn test:coverage
-      run: yarn test:coverage
+    - name: yarn test
+      run: yarn test
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
