--- a/package.json
+++ b/package.json
@@ -75,13 +75,14 @@
     "@types/node": "^15.12.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "@uniswap/v2-core": "^1.0.1",
     "chai": "^4.3.0",
     "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.20.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.0",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.12.1-ir.0",
     "hardhat-abi-exporter": "^2.9.0",
     "hardhat-deploy": "^0.8.6",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
