--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "@levxdao/ve",
-  "description": "VE and Gauge Voting for NFTs",
+  "name": "@ohgeez/levx-protocol",
+  "description": "Solidity contracts for levx.io, an NFT staking protocol governed by VE tokenomics.",
   "keywords": [
-    "levx",
-    "levx-dao",
+    "ohgeez",
+    "ohgeez-dao",
     "ve",
-    "voting-escrowed"
+    "voting-escrowed",
+    "levx",
+    "levx-protocol"
   ],
-  "homepage": "https://github.com/levxdao/ve#readme",
+  "homepage": "https://github.com/ohgeez-dao/levx-protocol#readme",
   "bugs": {
-    "url": "https://github.com/levxdao/ve/issues",
+    "url": "https://github.com/ohgeez-dao/levx-protocol/issues",
     "email": "team@levx.io"
   },
   "license": "WTFPL",
@@ -18,7 +20,7 @@
     "abis",
     "contracts",
     "deployments",
-    "typechain"
+    "typechain-types"
   ],
   "scripts": {
     "build": "hardhat compile",
@@ -61,45 +63,49 @@
     "*.md": "prettier --write"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.0",
-    "@commitlint/config-conventional": "^12.0.0",
-    "@nomiclabs/hardhat-ethers": "yarn:hardhat-deploy-ethers",
-    "@nomiclabs/hardhat-etherscan": "^2.1.0",
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@tenderly/hardhat-tenderly": "^1.0.0",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.0.2",
-    "@types/chai": "^4.2.00",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^15.12.0",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "@uniswap/v2-core": "^1.0.1",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "chai": "^4.3.0",
     "cross-env": "^7.0.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.20.0",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.3.0",
-    "hardhat": "^2.12.1-ir.0",
-    "hardhat-abi-exporter": "^2.9.0",
-    "hardhat-deploy": "^0.8.6",
-    "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.26.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.7.0",
+    "hardhat": "^2.12.0",
+    "hardhat-abi-exporter": "^2.10.0",
+    "hardhat-deploy": "^0.11.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.0",
     "hardhat-log-remover": "^2.0.0",
     "hardhat-preprocessor": "^0.1.0",
     "hardhat-spdx-license-identifier": "^2.0.0",
-    "hardhat-watcher": "^2.0.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.3",
-    "solidity-coverage": "^0.7.0",
+    "hardhat-tracer": "^1.1.1",
+    "hardhat-watcher": "^2.5.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.0",
+    "loading-cli": "^1.1.0",
+    "prettier": "^2.7.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
+    "prompts": "^2.4.2",
+    "sol2uml": "^2.2.6",
+    "solidity-coverage": "^0.8.0",
+    "stopwatch-cli": "^1.0.0",
     "ts-generator": "^0.1.0",
-    "ts-node": "^10.0.0",
-    "typechain": "^5.0.0",
-    "typescript": "^4.3.0"
+    "ts-node": "^10.9.0",
+    "typechain": "^8.1.0",
+    "typescript": "^4.8.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
